# CRGA_Football

./: .gitignore  Cargo.toml  README  README.md  index.html
src/: better_picks.txt  betters.rs  lib.rs  main.rs  page.rs  standings.rs
src/data/: create_team_div_match.rs
